--- a/src/Book.styles.css
+++ b/src/Book.styles.css
@@ -127,13 +127,14 @@ body {
     text-align: center;
     padding-left: 30px;
     padding-right: 30px;
+    text-shadow: 1px 1px black;
     
     background: linear-gradient(to right, #ff0000 0%, #ff9a00 10%, #d1de21 20%, #4fdc4a 30%, #3fdad8 40%, #2fc9e2 50%, #1c7fee 60%, #5f15f2 70%, #ba0cf8 80%, #fb07d9 90%, #ff0000 100%);
     background-size: 200% auto;
     
     color: #000;
     background-clip: text;
-    text-fill-color: transparent;
+  
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     
