--- a/src/Cover.styles.css
+++ b/src/Cover.styles.css
@@ -25,6 +25,30 @@ h1 {
     }
   }
 
+
+
+
+
+
+
+/*
+  background: linear-gradient(to right, #ff0000 0%, #ff9a00 10%, #d1de21 20%, #4fdc4a 30%, #3fdad8 40%, #2fc9e2 50%, #1c7fee 60%, #5f15f2 70%, #ba0cf8 80%, #fb07d9 90%, #ff0000 100%);
+  background-size: 200% auto;
+ 
+
+  color: #000;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+
+  
+  animation: move 5s linear infinite; }
+  @keyframes move {
+    to {
+      background-position: 200% center;
+    }
+  }*/
+
 .container {
   z-index: 1;
   perspective:3000px;
